# go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/api/v1/openapi.yaml
@@ -832,3 +832,22 @@ definitions:
         description: >
           Disable source IP verification for the endpoint.
         type: boolean
+  MonitorStatus:
+    description: Status of the node monitor
+    properties:
+      cpus:
+        description: Number of CPUs to listen on for events.
+        type: integer
+      npages:
+        description: Number of pages used for the perf ring buffer.
+        type: integer
+      pagesize:
+        description: Pages size used for the perf ring buffer.
+        type: integer
+      lost:
+        description: Number of samples lost by perf.
+        type: integer
+      unknown:
+        description: Number of unknown samples.
+        type: integer
+
